// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render a block button 1`] = `
<button
  class="sc-bdVaJa abdAo"
>
  Hello World
</button>
`;

exports[`Button should render a large button 1`] = `
<button
  class="sc-bdVaJa bZabos"
>
  Hello World
</button>
`;

exports[`Button should render a small button 1`] = `
<button
  class="sc-bdVaJa hsxKTm"
>
  Hello World
</button>
`;

exports[`Button should render a text disabled button 1`] = `
<button
  class="sc-bdVaJa kidJBV"
  disabled=""
>
  Hello World
</button>
`;

exports[`Button should render a text primary button 1`] = `
<button
  class="sc-bdVaJa fWqCje"
>
  Hello World
</button>
`;

exports[`Button should render children 1`] = `
<button
  class="sc-bdVaJa kidJBV"
>
  Hello World
</button>
`;
